--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.13.5",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@supabase/supabase-js": "^2.26.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
@@ -22,12 +23,22 @@
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "mui-file-dropzone": "^4.0.2",
     "next": "13.4.6",
     "notistack": "^3.0.1",
+    "pdf-dist": "^1.0.0",
+    "pdfjs": "^2.5.0",
+    "pdfjs-dist": "^3.6.172",
+    "raw-loader": "^4.0.2",
+    "re-resizable": "^6.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.1.2",
     "react-query": "^3.39.3",
     "supabase": "^1.68.6",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/react-pdf": "^7.0.0"
   }
 }
