--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.6",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
+    "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "mui-file-dropzone": "^4.0.2",
