--- a/webapp/package.json
+++ b/webapp/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pdf": "^7.1.2",
+    "react-player": "^2.12.0",
     "react-query": "^3.39.3",
     "supabase": "^1.68.6",
     "typescript": "5.1.3"
