--- a/webapp/package.json
+++ b/webapp/package.json
@@ -24,7 +24,6 @@
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
-    "mui-file-dropzone": "^4.0.2",
     "next": "13.4.6",
     "notistack": "^3.0.1",
     "pdf-dist": "^1.0.0",
@@ -34,6 +33,7 @@
     "re-resizable": "^6.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-pdf": "^7.1.2",
     "react-player": "^2.12.0",
     "react-query": "^3.39.3",
