--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
     "notistack": "^3.0.1",
+    "openai": "^3.3.0",
     "pdf-dist": "^1.0.0",
     "pdfjs": "^2.5.0",
     "pdfjs-dist": "3.6.172",
