--- a/webapp/package.json
+++ b/webapp/package.json
@@ -34,6 +34,7 @@
     "raw-loader": "^4.0.2",
     "re-resizable": "^6.9.9",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-pdf": "^7.1.2",
