--- a/webapp/package.json
+++ b/webapp/package.json
@@ -37,6 +37,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-joyride": "^2.5.4",
     "react-pdf": "^7.1.2",
     "react-player": "^2.12.0",
     "react-query": "^3.39.3",
